# muxpit

./: .gitignore  AGENTS.md  HOW_TO_RECOVER_SESSION.md  LICENSE  README.md  TODO.md  feedback.md  gen_icon.py  implement.md  index.html  package.json  plan.md  pnpm-lock.yaml  research.md  verification.md
.claude/: settings.local.json
.github/workflows/: android-apk.yml  release.yml
crates/muxpit-platform/: Cargo.toml
crates/wmux-core/: Cargo.toml
crates/wmux-platform/: Cargo.toml
crates/wmux-server/: Cargo.toml
crates/wmux-server/src/: agent_ipc.rs  main.rs  monitor.rs  remote_fs.rs
docs/: plan.md
docs/plans/: agent-hooks.md  agent-workbench-v0.1.md  auto-claude-split.md  grid-overview.md  linux-porting.md  os-abstraction-review.md  ssh-host-management.md
muxpit-cli/: Cargo.toml
muxpit-cli/src/: arguments.rs  control.rs  hooks.rs  ipc.rs  main.rs  platform.rs
scripts/: build-cli-sidecars.mjs  tauri-isolated-dev.mjs
src/: App.tsx  WebApp.tsx  main.tsx  themes.ts
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/assets/: muxpit-remote-cli.py  wmux-remote-cli.py
src-tauri/capabilities/: default.json  mobile.json
src-tauri/nsis/: installer.nsi
src-tauri/permissions/autogenerated/: browser_close.toml  browser_console_logs.toml  browser_create.toml  browser_current_url.toml  browser_navigate.toml  browser_reload.toml  browser_screenshot.toml  browser_set_visible.toml  browser_snapshot.toml  browser_update_bounds.toml  check_local_clis.toml  check_remote_clis.toml  check_remote_tmux.toml  desktop_agent_close.toml  desktop_agent_open.toml  desktop_agent_write.toml  desktop_claude_session.toml  desktop_claude_sessions.toml  desktop_session_goal_delete.toml  desktop_session_goal_set.toml  desktop_session_goals.toml  desktop_session_setting_set.toml  desktop_session_settings.toml  get_ports.toml  get_pty_pid.toml  get_session_metadata.toml  get_shell_ctx.toml  get_workspace_info.toml  install_cli_symlink.toml  list_fonts.toml  mobile_agent_installed.toml  pty_has_agent_process.toml  push_image_to_remote.toml  read_file.toml  remote_read_dir.toml  remote_read_file.toml  request_session_content.toml  resolve_control_request.toml  save_image_locally.toml  send_notification.toml  (+10 more)
src-tauri/scripts/: claude_sessions.py
src-tauri/src/: agent_launch_settings.rs  browser.rs  control.rs  desktop_agent.rs  desktop_impl.rs  file_tree.rs  ipc.rs  lib.rs  main.rs  mobile_agent.rs  monitor.rs  pasted_image.rs  pty.rs  remote_control.rs  remote_image.rs  remote_monitor.rs  shell_quote.rs  ssh_command.rs  sysinfo.rs  tmux_cc.rs  tmux_remote.rs
src-tauri/src/platform/: cli.rs  command.rs  fonts.rs  ipc.rs  ipc_unix.rs  ipc_windows.rs  mod.rs  paths.rs  process.rs  pty.rs
src/agent/: acpClient.ts  agentImages.ts  desktopAgentBridge.ts  desktopAgentChannels.ts  desktopUnifiedSessions.ts  desktopWorkbenchPersistence.ts
src/components/: AgentImageAttachments.css  AgentImageAttachments.tsx  AgentLauncherPanel.tsx  AgentMessageContent.tsx  AgentWorkbenchPanel.css  AgentWorkbenchPanel.tsx  AiPaneToolbar.tsx  BrowserPane.tsx  ClaudeSessionPane.tsx  CodeHighlight.tsx  ConfirmDialog.tsx  FilesRail.tsx  (+27 more)
tests/: acpClient.test.ts  agentImages.test.ts  agentProcessMonitor.test.ts  agentSession.test.ts  agentSessionRuntime.test.ts  agentTask.test.ts  agentWorkbenchPersistence.test.ts  aiCli.test.ts  aiTerminalStatus.test.ts  aiWorkbenchUi.test.ts  appShortcuts.test.ts  browserSurface.test.ts  claudeSession.test.ts  cliPackaging.test.ts  codexMobileClient.test.ts  controlRequest.test.ts  desktopAgentBridge.test.ts  desktopAgentChannels.test.ts  desktopUnifiedSessions.test.ts  desktopWorkbenchPersistence.test.ts  fileLink.test.ts  launchProfile.test.ts  locale.test.ts  markdown.test.ts  migrateLegacyStorage.test.ts  mobileAgentProtocol.test.ts  mobileClaudeSessionLoading.test.ts  mobileConnectLayout.test.ts  mobileConnectionResume.test.ts  mobileImageComposer.test.ts  mobileSessionScroll.test.ts  mobileSshContract.test.ts  mobileUnifiedSessions.test.ts  mobileWorkbenchWidth.test.ts  osc52.test.ts  ptyBackend.test.ts  ptyEvents.test.ts  runtimePlatform.test.ts  sessionGoals.test.ts  settings.test.ts  (+23 more)
wmux-cli/: Cargo.toml
wmux-cli/src/: control.rs  hooks.rs  ipc.rs  main.rs  platform.rs
(+86 files in other folders)
