[package]
name = "muxpit-cli"
version = "0.2.28"
edition = "2021"

[[bin]]
name = "muxpit-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
muxpit-platform = { path = "../crates/muxpit-platform" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }
