[package]
name = "wmux"
version = "0.0.1"
description = "Terminal multiplexer for AI agents"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wmux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
getrandom = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
portable-pty = "0.9"
sysinfo_crate = { package = "sysinfo", version = "=0.35.2", default-features = false, features = ["system"] }
listeners = "0.6.0"
wmux-platform = { path = "../crates/wmux-platform" }
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
] }
