[package]
name = "muxpit"
version = "0.2.33"
description = "Terminal multiplexer for AI agents"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "muxpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
getrandom = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["devtools", "unstable"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
portable-pty = "0.9"
sysinfo_crate = { package = "sysinfo", version = "=0.35.2", default-features = false, features = ["system"] }
listeners = "0.6.0"
muxpit-platform = { path = "../crates/muxpit-platform" }
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
russh = { version = "=0.60.3", default-features = false, features = ["ring", "rsa"] }
tokio = { version = "1", features = ["io-util", "sync", "time"] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "=1.0.0"
jni = "=0.21.1"
keyring-core = "=1.0.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
] }
