[package]
name = "wmux-cli"
version = "0.2.15"
edition = "2021"

[[bin]]
name = "wmux-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wmux-platform = { path = "../crates/wmux-platform" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }
