[package]
name = "wmux-server"
version = "0.0.1"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "wmux-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
getrandom = "0.2"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wmux-core = { path = "../wmux-core" }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
